--- a/WebApp/Views/Cart/Index.cshtml
+++ b/WebApp/Views/Cart/Index.cshtml
@@ -38,7 +38,7 @@
                                             <a class="thumbnail pull-left" href="#"> <img class="media-object" src="@Model.products[i].Image" style="width: 72px; height: 72px;"> </a>
                                             <div class="media-body">
                                                 <h4 class="media-heading"><a href="#">@Model.products[i].Name</a></h4>
-                                                <h5 class="media-heading"> by <a href="#">@Model.products[i].Producer</a></h5>
+                                                <h5 class="media-heading"> by: <a href="#">DaiLySonMinhHung</a></h5>
 
                                             </div>
                                         </div>
