--- a/AdminApp/Views/Shared/Products/_Layout.cshtml
+++ b/AdminApp/Views/Shared/Products/_Layout.cshtml
@@ -21,7 +21,13 @@
                     </ul>
                     <form asp-action="Index" class="form-inline my-2 my-lg-0" method="get">
                         <input class="form-control mr-sm-2" id="searchText" name="searchText" type="text" placeholder="Tìm kiếm" aria-label="Search" value=@ViewBag.searchText>
-                        <input class="btn btn-outline-light my-2 my-sm-0" type="submit" value="Tìm kiếm"/>
+                        <input class="btn btn-outline-light my-2 my-sm-0" type="submit" value="Tìm kiếm" />
+                    </form>
+                    <form asp-action="ExportExcel" class="form-inline my-2 my-lg-0"  style="margin-left:16px" method="get">
+                        <button type="submit"
+                                class="btn btn-outline-light my-2 my-sm-0">
+                            Export Excel
+                        </button>
                     </form>
                 </div>
             </nav>
